--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -1,7 +1,7 @@
 {
   "Language": "Language",
   "Login": "Login",
-  "Username": "Username",
+  "Username": "Email",
   "Password": "Password",
   "Sign in": "Sign in",
   "Don't have an account?": "Don't have an account?",
@@ -52,5 +52,57 @@
   "No Thanks": "No Thanks",
   "Change": "Change",
   "Edit your personal information": "Edit your personal information",
-  "Save": "Save"
+  "Save": "Save",
+  "Costs": "Costs",
+  "Profits": "Profits",
+  "Filter by": "Filter by",
+  "Category": "Category",
+  "Sub category": "Sub category",
+  "Currency": "Currency",
+  "Curr.": "Curr.",
+  "Date from": "Date from",
+  "Clear": "Clear",
+  "Date to": "Date to",
+  "Search by title": "Search by title",
+  "Results": "Results",
+  "Title": "Title",
+  "Comment": "Comment",
+  "Price": "Price",
+  "New bill": "New bill",
+  "Add new bill (Cost)": "Add new bill (Cost)",
+  "Add new bill (Profit)": "Add new bill (Profit)",
+  "Quantity": "Quantity",
+  "Not my city": "Not my city",
+  "Close": "Close",
+  "Add": "Add",
+  "I bought a new car for 10000€...": "I bought a new car for 10000€...",
+  "Show details": "Show details",
+  "Cost": "Cost",
+  "Profit": "Profit",
+  "Created": "Created",
+  "Edit": "Edit",
+  "Delete": "Delete",
+  "Are you sure that you want delete this bill?": "Are you sure that you want delete this bill?",
+  "Min cost": "Min cost",
+  "Max cost": "Max cost",
+  "Min profit": "Min profit",
+  "Max profit": "Max profit",
+  "Bills Analysis": "Bills Analysis",
+  "Profit & Cost": "Profit & Cost",
+  "Bills price": "Bills price",
+  "Categories (costs)": "Categories (costs)",
+  "of category": "of category",
+  "Categories (profits)": "Categories (profits)",
+  "Sub categories (costs)": "Sub categories (costs)",
+  "of sub category": "of sub category",
+  "Sub categories (profits)": "Sub categories (profits)",
+  "Active": "Active",
+  "Search": "Search",
+  "Your active/deactive categories": "Your active/deactive categories",
+  "Your active/deactive subcategories": "Your active/deactive subcategories",
+  "Your active/deactive currencies (max. 10)": "Your active/deactive currencies (max. 10)",
+  "Active currencies monthly limit": "Active currencies monthly limit",
+  "Your active currencies and their monthly limit": "Your active currencies and their monthly limit",
+  "Passwords are not same!": "Passwords are not same!",
+  "Password should be atleast 8 characters long\\n' +\n            '            and should contain one number, one character and one special\\n' +\n            '            character": "Password should be atleast 8 characters long\\n' +\n            '            and should contain one number, one character and one special\\n' +\n            '            character"
 }
