--- a/src/app/translations/hr.json
+++ b/src/app/translations/hr.json
@@ -1,7 +1,7 @@
 {
   "Language": "Jezik",
   "Login": "Prijava",
-  "Username": "Korisničko ime",
+  "Username": "Email",
   "Password": "Lozinka",
   "Sign in": "Prijava",
   "Don't have an account?": "Nemate račun?",
@@ -41,7 +41,7 @@
   "Personal": "Osobno",
   "Gender": "Spol",
   "Contact": "Kontakt",
-  "Phone": "Telefon/Mobitel",
+  "Phone": "Mobitel",
   "Application": "Aplikacija",
   "Categories": "Kategorije",
   "Sub categories": "Podkategorije",
@@ -52,5 +52,57 @@
   "No Thanks": "Ne hvala",
   "Change": "Promjeni",
   "Edit your personal information": "Uredite osobne informacije",
-  "Save": "Spremi"
+  "Save": "Spremi",
+  "Costs": "Troškovi",
+  "Profits": "Profit",
+  "Filter by": "Filtriraj po",
+  "Category": "Kategorija",
+  "Sub category": "Pod kategorija",
+  "Currency": "Valuta",
+  "Curr.": "Valuta",
+  "Date from": "Datum od",
+  "Clear": "Obriši",
+  "Date to": "Datum do",
+  "Search by title": "Pretraži po naslovu",
+  "Results": "Rezultati",
+  "Title": "Naslov",
+  "Comment": "Komentar",
+  "Price": "Cijena",
+  "New bill": "Novi račun",
+  "Add new bill (Cost)": "Dodaj novi račun (Trošak)",
+  "Add new bill (Profit)": "Dodaj novi račun (Profit)",
+  "Quantity": "Količina",
+  "Not my city": "Nije moj grad",
+  "Close": "Zatvori",
+  "Add": "Dodaj",
+  "I bought a new car for 10000€...": "Kupio sam automobil za 10000€...",
+  "Show details": "Prikaži detaljno",
+  "Cost": "Trošak",
+  "Profit": "Profit",
+  "Created": "Kreirano",
+  "Edit": "Uredi",
+  "Delete": "Obriši",
+  "Are you sure that you want delete this bill?": "Da li ste sigurni da želite obrisati ovaj račun?",
+  "Min cost": "Min trošak",
+  "Max cost": "Max trošak",
+  "Min profit": "Min profit",
+  "Max profit": "Max profit",
+  "Bills Analysis": "Analiza računa",
+  "Profit & Cost": "Profit & Troškovi",
+  "Bills price": "Cijena računa",
+  "Categories (costs)": "Kategorije (troškovi)",
+  "of category": "kategorije",
+  "Categories (profits)": "Kategorije (profit)",
+  "Sub categories (costs)": "Podkategorije (troškovi)",
+  "of sub category": "podkategorije",
+  "Sub categories (profits)": "Podkategorije (profit)",
+  "Active": "Aktivne",
+  "Search": "Pretraži",
+  "Your active/deactive categories": "Vaše aktivne/neaktivne kategorije",
+  "Your active/deactive subcategories": "Vaše aktivne/neaktivne podkategorije",
+  "Your active/deactive currencies (max. 10)": "Vaše aktivne/neaktivne valute (max.10)",
+  "Active currencies monthly limit": "Mjesečni limit aktivnih valuta",
+  "Your active currencies and their monthly limit": "Vaše aktivne valute i mjesečni limiti",
+  "Passwords are not same!": "Lozinke nisu jednake!",
+  "Password should be atleast 8 characters long\\n' +\n            '            and should contain one number, one character and one special\\n' +\n            '            character": "Lozinka treba sadržavati najmanje 8 simbola\\n' +\n            '            i treba sadrđavati jedan broj, jedno slovo i jedan specijalni\\n' +\n            '            simbol"
 }
