--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -105,5 +105,10 @@
   "Your active currencies and their monthly limit": "Your active currencies and their monthly limit",
   "Passwords are not same!": "Passwords are not same!",
   "Password is not valid!": "Password is not valid!",
-  "Password should be at least 8 characters long and should contain one number, one character and one special character!": "Password should be at least 8 characters long and should contain one number, one character and one special character!"
+  "Password should be at least 8 characters long and should contain one number, one character and one special character!": "Password should be at least 8 characters long and should contain one number, one character and one special character!",
+  "Contains at least one upper character": "Contains at least one upper character",
+  "Contains at least one lower character": "Contains at least one lower character",
+  "Contains at least one special character": "Contains at least one special character",
+  "Contains at least one digit character": "Contains at least one digit character",
+  "Contains between 8 and 25 characters": "Contains between 8 and 25 characters"
 }
