--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -111,5 +111,14 @@
   "Contains at least one special character": "Contains at least one special character",
   "Contains at least one digit character": "Contains at least one digit character",
   "Contains between 8 and 25 characters": "Contains between 8 and 25 characters",
-  "Application rating": "Application rating"
+  "Application rating": "Application rating",
+  "Report": "Report",
+  "Report a new bug": "Report a new bug",
+  "I can't add a new bill..": "I can't add a new bill..",
+  "Application": "Application",
+  "Report bugs": "Report bugs",
+  "Read all bugs before reporting new bugs (Duplicate).": "Read all bugs before reporting new bugs (Duplicate).",
+  "List of all bugs reported by users.": "List of all bugs reported by users.",
+  "Bugs": "Bugs",
+  "Suggestions": "Suggestions"
 }
