--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -127,5 +127,7 @@
   "It would be nice to have a Cigarettes category..": "It would be nice to have a Cigarettes category..",
   "Suggestion is successfully created!": "Suggestion is successfully created!",
   "Reported by": "Reported by",
-  "Date": "Date"
+  "Date": "Date",
+  "Location": "Location",
+  "My city": "My city"
 }
