--- a/src/app/translations/hr.json
+++ b/src/app/translations/hr.json
@@ -127,5 +127,7 @@
   "It would be nice to have a Cigarettes category..": "Bilo bi lijepo da postoji kategorija Cigarete..",
   "Suggestion is successfully created!": "Prijedlog je uspješno kreiran!",
   "Reported by": "Prijavio",
-  "Date": "Datum"
+  "Date": "Datum",
+  "Location": "Lokacija",
+  "My city": "Moj grad"
 }
