--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -129,5 +129,6 @@
   "Reported by": "Reported by",
   "Date": "Date",
   "Location": "Location",
-  "My city": "My city"
+  "My city": "My city",
+  "Application info": "Application info"
 }
