--- a/src/app/translations/hr.json
+++ b/src/app/translations/hr.json
@@ -129,5 +129,6 @@
   "Reported by": "Prijavio",
   "Date": "Datum",
   "Location": "Lokacija",
-  "My city": "Moj grad"
+  "My city": "Moj grad",
+  "Application info": "Informacije aplikacije"
 }
