--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -130,5 +130,6 @@
   "Date": "Date",
   "Location": "Location",
   "My city": "My city",
-  "Application info": "Application info"
+  "Application info": "Application info",
+  "Clear all filters": "Clear all filters"
 }
