--- a/src/app/translations/hr.json
+++ b/src/app/translations/hr.json
@@ -130,5 +130,6 @@
   "Date": "Datum",
   "Location": "Lokacija",
   "My city": "Moj grad",
-  "Application info": "Informacije aplikacije"
+  "Application info": "Informacije aplikacije",
+  "Clear all filters": "Obriši sve filtere"
 }
