--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -131,5 +131,7 @@
   "Location": "Location",
   "My city": "My city",
   "Application info": "Application info",
-  "Clear all filters": "Clear all filters"
+  "Clear all filters": "Clear all filters",
+  "Show bar graph": "Show bar graph",
+  "Show pie graph": "Show pie graph"
 }
