--- a/src/app/translations/en.json
+++ b/src/app/translations/en.json
@@ -133,5 +133,12 @@
   "Application info": "Application info",
   "Clear all filters": "Clear all filters",
   "Show bar graph": "Show bar graph",
-  "Show pie graph": "Show pie graph"
+  "Show pie graph": "Show pie graph",
+  "Next": "Next",
+  "Back": "Back",
+  "Reset": "Reset",
+  "Personal information": "Personal information",
+  "Done": "Done",
+  "Click 'Sign up' to finish registration.": "Click 'Sign up' to finish registration.",
+  "If you have any problem, send mail on": "If you have any problem, send mail on"
 }
