--- a/src/app/translations/hr.json
+++ b/src/app/translations/hr.json
@@ -133,5 +133,12 @@
   "Application info": "Informacije aplikacije",
   "Clear all filters": "Obriši sve filtere",
   "Show bar graph": "Prikaži bar graf",
-  "Show pie graph": "Prikaži pie graf"
+  "Show pie graph": "Prikaži pie graf",
+  "Next": "Dalje",
+  "Back": "Nazad",
+  "Reset": "Restart",
+  "Personal information": "Osobne informacije",
+  "Done": "Završi",
+  "Click 'Sign up' to finish registration.": "Kliknite 'Registrirajte se' da završite registraciju.",
+  "If you have any problem, send mail on": "Ako imate problem, pošaljite mail na"
 }
